--- a/Clases/20230925.css
+++ b/Clases/20230925.css
@@ -68,12 +68,19 @@
 
     *****************
     EJERCICIO
-    CREAR DOS H3 Y APLICAR ESTILO CLASE, ID. ROJO, CENTRO, MAY, 3REM
-    CREAR UN H6 APLICAR ESTILO ELEMENTO
-    CREAR UNA SECCION CON UN PARRAFO Y APLICAR ESTILO CON CADENA DESCENDENTE DE ELEMENTOS
+    CREAR DOS H3 Y APLICAR ESTILO con selector de CLASE, ID. ROJO, CENTRO, MAY, 3REM
+
+    CREAR UN H6 APLICAR ESTILO con selector ELEMENTO
+
+    CREAR UNA SECCION CON UN PARRAFO Y APLICAR ESTILO CON 
+    selector de CADENA DESCENDENTE DE ELEMENTOS
+
     CREAR UNA IMAGEN Y APLICAR ESTILO CON SELECTOR ATRIBUTO.
-    CREAR UNA SECCION CON 3 ENLACES Y APLICAR ESTILO A TODOS LOS HIJOS
-    SELECCIONAR EL ID Y EL ATRIBUTO ANTERIOR A LA VEZ Y PONER COLOR VERDE
+
+    CREAR UNA SECCION CON 3 ENLACES Y APLICAR ESTILO con selector TODOS LOS HIJOS
+
+    SELECtor multiple, seleccionar EL ID Y EL ATRIBUTO ANTERIOR A LA VEZ 
+    Y PONER COLOR VERDE
 
     *****************
 
