--- a/Clases/20230926.css
+++ b/Clases/20230926.css
@@ -1,8 +1,4 @@
-
-   /*
-   
-   
-
+/*
 **********************
 INICIO CLASE 2023/09/26 
 **********************
@@ -64,7 +60,7 @@ INICIO CLASE 2023/09/26
     !!!!!!!!!!!!!!!!!!!!!
     EJERCICIO REPASO
 
-    1- CREAR UNA NUEA CARPETA DENTRO DE FULLSTACK, A
+    1- CREAR UNA NUEVA CARPETA DENTRO DE FULLSTACK, A
     LA ALTURA DE PROYECTOINICIO QUE SE LLAME
     REPASOSELECTORES
 
@@ -77,7 +73,7 @@ INICIO CLASE 2023/09/26
 
     4- SECCION2: AÑADIR UN H3 Y DAR ESTILO MEDIANTE
     UN SELECTOR DE CLASE (.)
-    ROJO, MAYUSCULAS, CENTRADO, 4REM 
+    ROJO, MAYUSCULAS, CENTRADO, 5REM 
     TEXTO: (SECCION2 CON SELECTOR DE CLASE)
 
     5- SECCION3: AÑADIR UN P Y DAR ESTILO MEDIANTE
@@ -93,7 +89,7 @@ INICIO CLASE 2023/09/26
     7- SECCION5: AÑADIR UNA CLASE A LA SECCION,
     CREAR SEIS H4 Y DAR ESTILO MEDIANTE UN SELECTOR DE 
     CADENA DESCENDENTE, PARTIENDO DE LA SECCION
-    ROSA, MAYUSCULA, CENTRADO, 4REM
+    ROSA, MAYUSCULA, CENTRADO, 3REM
     TEXTO: (SECCION5 CON SELECTOR DE CADENA DESCENDENTE)
     
     8- SECCION6: AÑADIR UNA CLASE A LA SECCION,
@@ -103,7 +99,12 @@ INICIO CLASE 2023/09/26
     AMARILLO, MAYUSCULA, CENTRADO, 4REM
     TEXTO: (SECCION6 CON SELECTOR DE TODOS LOS HIJOS)
 
-
+    9- SECCION 7: AÑADIR UNA CLASE A LA SECCION
+    CREAR UN H3, UN P, UN H6
+    HACIENDO USO DE LA CADENA DESCENDENTE, APLICAR
+    SIMULTANEAMENTE ESTILOS AL H3 Y EL H6
+    MORADO, MAYUSCULA, CENTRADO, 2REM
+    TEXTO (SECCION 7 CON SELECTOR SIMULTANEO)
 
 
 
@@ -138,6 +139,9 @@ COLORES EN CSS
     EN CHROME SI ABRIMOS EL INSPECTOR Y HACEMOS CLICK EN ALGUN COLOR,
     NOS INDICAN EL VALOR HEX.
 
+
+
+
     UNA BUENA PRÁCTICA ES CREAR  UNA PALETA DE COLORES
     AL INICIO DEL DOCUMENTO CSS, PARA ELLO
     HACEMOS USO DE LOS PSEUDOSELECTORES
@@ -159,6 +163,8 @@ ALMACENAR VARIABLES DE CSS ES EL OBJETIVO
     GUARDAR LOS COLORES DE LA WEB TUCARRERADIGITAL
     QUE CONSIDEREIS NECESARIOS COMO VARIABLES
     *******************
+
+
 
     LA VENTAJA ES QUE YO PUEDO CAMBIAR EL COLOR EN LA
     DEFINICION DE LA VARIABLE, Y AUTOMATICAMENTE SE 
@@ -206,10 +212,10 @@ NORMALICE
 
     TENEMOS QUE PROBAR LA WEB EN DIFERENTES NAVEGADORES, PUES NO
     TODOS LA MUESTRAN DEL MISMO MODO, PARA ELLO HACEMOS USO DE
-    NORMALICE.CSS, QUE HARÁ QUE TODOS LOS ELEMENTOS SE VEAN DEL MISMO
+    NORMALIZE.CSS, QUE HARÁ QUE TODOS LOS ELEMENTOS SE VEAN DEL MISMO
     MODO EN TODOS LOS NAVEGADORES
 
-    BUSCAMOS NORMALICE.CSS, COPIAMOS TODO EL CÓDIGO
+    BUSCAMOS NORMALIZE.CSS, COPIAMOS TODO EL CÓDIGO
     DESHABILITAR EL TRADUCTOR DE GOOGLE
     CTRL + A PARA SELECCIONAR TODOS
 
