--- a/Clases/20230927.css
+++ b/Clases/20230927.css
@@ -98,7 +98,7 @@ DISPLAY BLOCK E INLINE
 
 LOS ELEMENTOS POR DEFECTO TIENEN ASIGNADOS BLOCK O INLINE
 
-BLOCK, UNO DEBAJO DEL OTRO, LOS DIV
+BLOCK, UNO DEBAJO DEL OTRO, LOS DIV POR EJEMPLO
 INLINE, LOS ENLACE POR EJEMPLO
 
 NINGUN ELEMENTO TIENE POR DEFECTO DISPLAY FLEX O GRID,
@@ -119,7 +119,7 @@ padding-bottom: 10px;
 CREAMOS UN DIV QUE SERÁ UN CONTENEDOR PARA CENTRAR EL NAV
 A CONTINUACION CREAMOS OTRO DIV DENTRO, EL CUAL ME ESTRUCTURA EL
 NAV
-ESTE DIV TIENE UN TRATMIENTO ESPECIAL, PUES ES UN DISPLAY FLEX
+ESTE DIV TIENE UN TRATAMIENTO ESPECIAL, PUES ES UN DISPLAY FLEX
 
 
 ***************
@@ -155,32 +155,4 @@ align-items: center; /* FUNCIONA CON DIRECCION SECOND*/
 /*
 } */
 /*
-
-
-
-FLEX-WRAP ME PERMITE DECIRLE A LOS ELEMENTOS HIJOS,
-QUE CUANDO NO QUEPAN, SE VAYAN A OTRA LINEA,
-PONER IMAGEN DE FLEX-WRAP
-
-flex: 66.66%;
-max-width: 66.66%;
-
-
-
-
-
-**************
-DIAPOSITIVA 09 COMO ESCRIBIR CSS
-
-BEM:
-DESCRIBE LOS ELEMENTOS QUE VAMOS TENIENDO
-
-UTILITY-FIRST:
-DESCRIBE LA ACCION QUE VA A LLEVAR A CABO
-
-MODULO:
-EL MAS UTILIZADO
-DEFINE CONTENIDO PRINCIPAL Y DESPUES VAS HACIA LOS ELEMENTOS HIJOS
-
-
 
