--- a/proyectoinicio/css/style.css
+++ b/proyectoinicio/css/style.css
@@ -283,11 +283,15 @@ border-radius: 12px;
     justify-content: space-between;
 }
 
-.cursosOfertados div{
-    justify-content: space-between;
+.cursosOfertados>div{
+
     max-width: 50%;
     flex: 2;
     padding: 40px 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 300px;
 }
 
 .marketing{
@@ -306,7 +310,7 @@ border-radius: 12px;
     margin-left: 15px;
 }
 
-.cursosOfertados div h2{
+.cursosOfertados h2{
 
     color: white;
     font-size: 2.7rem;
@@ -325,6 +329,7 @@ border-radius: 12px;
     text-transform: uppercase;
     font-weight: 700;
     padding: 20px 60px;
+    display: inline-block;
 }
 
 /* .ejercicioMax{
