--- a/proyectoinicio/css/style.css
+++ b/proyectoinicio/css/style.css
@@ -340,6 +340,51 @@ border-radius: 12px;
 
 /* ESTILOS SECCION PIDENOSLO  */
 
+.pidenoslo{
+    margin-bottom: 150px;
+
+}
+.pidenoslo h3{
+    text-align: center;
+    color: var(--colorSecundario);
+    text-transform: uppercase;
+    font-weight: 800;
+    margin-bottom: 40px 0;
+}
+.pidenoslo div{
+display: flex;
+flex-direction: row;
+justify-content: center;
+}
+.pidenoslo a{
+    background-color: var(--colorPrincipal);
+    color: white;
+    font-family: var(--fuentePrincipal);
+    font-size: 1.4rem;
+    padding: 20px 40px;
+    border-radius: 40px;
+    font-weight: 800;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 1px solid;
+}
+
+
+.pidenoslo a:hover{
+    background-color: var(--colorSecundario);
+    text-decoration: underline;
+}
+
+/* .ejercicioColumna{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+
+} */
+
+
+
+
 
 /* ESTILOS SECCION VIDEO  */
 
