--- a/Clases/20230929.css
+++ b/Clases/20230929.css
@@ -7,7 +7,7 @@ COMIENZO CLASE 2023/09/28
     %%%%%%%%%%%%%%%%%%%%%%%%%
     REPASO DÍA ANTERIOR
 
-    COMO ESCRIBIR CSS
+    COMO ESCRIBIR CSS 
 
     BEM:
     DESCRIBE LOS ELEMENTOS QUE VAMOS TENIENDO
@@ -48,6 +48,20 @@ COMIENZO CLASE 2023/09/28
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     !!!!!!!!!!!!!!!!!!!!!!!!
     DIFERENCIA ENTRE PADDING Y MARGIN
 
@@ -58,6 +72,20 @@ COMIENZO CLASE 2023/09/28
     APLICAMOS UN PADDING DE 50PX A LA SEGUNDA
 
     QUE DIFERENCIA HAY?
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -81,23 +109,31 @@ COMIENZO CLASE 2023/09/28
 
 
 
+
+
+
+
+
+
+
+
     !!!!!!!!!!!!!!!!!!!!!!!!
     USO DE JUSTIFY-CONTENT Y ALIGN ITEMS
 
     CREAMOS DOS SECCIONES CON UN H5(FLEX) CADA UNA DE ELLAS
-    LE DAMOS UN TAMAÑO A LAS SECCIONES DE ANCHO 300PX Y ALTO 300PX Y COLOR VERDE
+    LE DAMOS UN TAMAÑO A LAS SECCIONES DE ANCHO 300PX Y ALTO 300PX
 
     LA PRIMERA SECCION LE CREO UNA CLASE CON UN 
     FLEX-DIRECTION ROW
     JUSTIFY-CONTENT: FLEX-START;
     ALIGNT-ITEMS:END;
-    COLOR VERDE
+    COLOR FONDO VERDE
 
     LA SEGUNDA SECCION LE CREO UNA CLASE CON UN 
     FLEX-DIRECTION COLUMN
     JUSTIFY-CONTENT: FLEX-START;
     ALIGNT-ITEMS:END;
-    COLOR AZUL
+    COLOR FONDO AZUL
 
 
 
@@ -116,8 +152,8 @@ FLEX-WRAP ME PERMITE DECIRLE A LOS ELEMENTOS HIJOS,
 QUE CUANDO NO QUEPAN, SE VAYAN A OTRA LINEA,
 PONER IMAGEN DE FLEX-WRAP
 
-flex: 66.66%;
-max-width: 66.66%;
+flex: 1;
+max-width: 50%;
 
 
 VAMOS A VER OTRA PROPIEDAD, QUE ES EL HOVER
@@ -131,6 +167,49 @@ a:hover {
 a:visited COLOR QUE SE QUEDA CUANDO SE HA VISITADO
 
 a:focus ESTILO QUE SE QUEDA CUANDO SE SELECCIONA AL NAVEGAR POR EL TECLADO 
+
+
+
+%%%%%%%%%%%%%%%%%%%
+DIAPOSITIVA 11 BOX MODEL
+
+CONTENIDO
+RELLENO
+BORDE
+MARGEN
+
+COMO EVITAR ESTO Y PODER DARLE UN TAMAÑO CONCRETO AL ELEMENTO ENTERO, SIN
+TENER EN CUENTA EL PADDING, MARGIN Y BORDER
+
+EN EL HTML AÑADIR
+
+html{
+box-sizing: border-box;
+}
+
+DEBAJO
+
+*, *:before, *:after{
+box-sizing: inherit;
+}
+
+*/
+
+
+
+
+
+
+
+
+
+
+
+/*
+
+
+
+
 
 
 !!!!!!!!!!!!!!!!!!
@@ -209,27 +288,3 @@ CREAR UN DIV CON:
 }
 
 EN CSS TODO ES UNA CAJA
-
-
-%%%%%%%%%%%%%%%%%%%
-DIAPOSITIVA 11 BOX MODEL
-
-CONTENIDO
-RELLENO
-BORDE
-MARGEN
-
-COMO EVITAR ESTO Y PODER DARLE UN TAMAÑO CONCRETO AL ELEMENTO ENTERO, SIN
-TENER EN CUENTA EL PADDING, MARGIN Y BORDER
-
-EN EL HTML AÑADIR
-
-box-sizing: border-box;
-
-DEBAJO
-
-*, *:before, *:after{
-box-sizing: inherit;
-}
-
-*/
