--- a/proyectoinicio/css/style.css
+++ b/proyectoinicio/css/style.css
@@ -684,6 +684,78 @@ h1 {
 
 /* ESTILOS HEADER  */
 
+.seccionHeader{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+
+.seccionEnlaces {
+
+    display: flex;
+    flex-direction: column;
+}
+.seccionLogin{
+
+    display: flex;
+    justify-content: flex-end;
+}
+
+.seccionLogin a{
+
+    color: var(--colorPrincipal);
+    font-family: var(--fuentePrincipal);
+    margin-left: 7px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 1.7rem;
+}
+
+.seccionLogin a:hover{
+    text-decoration: underline;
+}
+
+
+.seccionNav a{
+    color: var(--colorSecundario);
+    font-family: var(--fuentePrincipal);
+    margin-left: 7px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1.7rem;
+    display: inline-block;
+}
+
+.seccionNav a:hover{
+    text-decoration: underline;
+}
+
+.botonInformate{
+    background-color: var(--colorPrincipal);
+    padding: 0.6rem 1.5rem;
+    border-radius: 4rem;
+    color: white !important;
+}
+
+.botonInformate:hover{
+    background-color: var(--colorSecundario);
+    text-decoration: none !important;
+}
+
+.seccionImagen{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+
+
 
 
 
