--- a/proyectoinicio/css/style.css
+++ b/proyectoinicio/css/style.css
@@ -10,12 +10,26 @@ html {
     font-size: 62.5%;
 }
 
+
+
 body {
     font-size: 16px;
     /* background-color: var(--colorPrincipal); */
     font-family: var(--fuentePrincipal);
+    /* background-color: red; */
 }
 
+/* @media (min-width:900px) {
+    body{
+        background-color: yellow;
+    }
+}
+
+@media (max-width:700px) {
+    body{
+        background-color: blue;
+    }
+} */
 
 /* ESTO ME PERMITE CONSEGUIR 10PX = 1REM 
     SIN ESO 16PX = 1REM*/
@@ -144,20 +158,33 @@ h6{
 
 /* ESTILOS GENERICOS  */
 
-.contenedor {
-    max-width: 88%;
 
-    /* margin-top:0;
+
+@media (min-width:1140px) {
+    .contenedor {
+        max-width: 88%;
+        /* margin-top:0;
     margin-right: auto;
     margin-bottom: 0;
     margin-left: auto; */
-
-    /* margin: 0 auto 0 auto; */
-
-    margin: 0 auto;
+        /* margin: 0 auto 0 auto; */
+        margin: 0 auto;
+    }
 }
 
+@media (max-width:1140px) and (min-width:768px) {
+    .contenedor{
+        max-width: 80%;
+        margin: 0 auto;
+    }
+}
 
+@media (max-width:768px) {
+    .contenedor{
+        max-width: 0%;
+        margin: 0 auto;
+    }
+}
 /* ESTILOS PARA EL MAIN  */
 
 .fondoMain {
@@ -390,7 +417,7 @@ h1 {
 
 
 /* ESTILOS SECCION VIDEO  */
-.video{
+.video {
     justify-content: center;
     display: flex;
     margin-bottom: 70px;
@@ -398,25 +425,25 @@ h1 {
 
 /* ESTILOS SECCION PARA QUIEN SON ESTOS CURSOS  */
 
-.seccionParaQuien{
+.seccionParaQuien {
     display: flex;
     flex-direction: row;
     margin-bottom: 100px;
 }
 
-.seccionParaQuien>div{
-    flex:1;
+.seccionParaQuien>div {
+    flex: 1;
     max-width: 50%;
 }
 
-.seccionParaQuien h3{
-    color:var(--colorPrincipal);
+.seccionParaQuien h3 {
+    color: var(--colorPrincipal);
     font-family: var(--fuentePrincipal);
     font-weight: 600;
     font-size: 1.7rem;
 }
 
-.seccionParaQuien h2{
+.seccionParaQuien h2 {
     font-family: var(--fuentePrincipal);
     color: var(--colorSecundario);
     font-size: 2.7rem;
@@ -424,12 +451,12 @@ h1 {
     margin-bottom: 22px;
 }
 
-.paraQuienIzq{
+.paraQuienIzq {
     margin-right: 15px;
 }
 
 
-.seccionParaQuien p{
+.seccionParaQuien p {
     font-family: var(--fuentePrincipal);
     font-size: 1.5rem;
     font-weight: 200;
@@ -438,11 +465,11 @@ h1 {
     color: var(--colorSecundario);
 }
 
-.seccionParaQuien span{
+.seccionParaQuien span {
     font-weight: 800;
 }
 
-.paraQuienIzq h4{
+.paraQuienIzq h4 {
     font-family: var(--fuentePrincipal);
     color: var(--colorSecundario);
     font-weight: 800;
@@ -450,7 +477,7 @@ h1 {
     line-height: 1.8;
 }
 
-.paraQuienIzq a{
+.paraQuienIzq a {
     color: var(--colorPrincipal);
     text-transform: uppercase;
     font-family: var(--fuentePrincipal);
@@ -458,16 +485,16 @@ h1 {
     font-weight: 700;
 }
 
-.paraQuienIzq h5{
+.paraQuienIzq h5 {
     font-family: var(--fuentePrincipal);
-    font-weight:800;
+    font-weight: 800;
     font-size: 1.4rem;
-    line-height: 1.5; 
+    line-height: 1.5;
     color: var(--colorSecundario);
     margin-bottom: 25px;
 }
 
-.paraQuienIzq .botonInfografia{
+.paraQuienIzq .botonInfografia {
     background-color: var(--colorPrincipal);
     color: white;
     text-decoration: none;
@@ -476,19 +503,19 @@ h1 {
 
 }
 
-.paraQuienDer{
+.paraQuienDer {
     display: flex;
     flex-direction: column;
     margin-left: 45px;
     margin-top: 60px;
 }
 
-.paraQuienDerSup{
+.paraQuienDerSup {
     background-color: var(--colorPrincipal);
     padding: 60px 30px;
 }
 
-.paraQuienDerSup h5{
+.paraQuienDerSup h5 {
     font-family: var(--fuentePrincipal);
     font-size: 2.5rem;
     font-weight: 800;
@@ -497,14 +524,15 @@ h1 {
     color: white;
 }
 
-.paraQuienDerSup .destacarAzul{
+.paraQuienDerSup .destacarAzul {
     color: var(--colorSecundario);
 }
 
-.paraQuienDerSup span{
+.paraQuienDerSup span {
     color: black;
 }
-.paraQuienDerInf{
+
+.paraQuienDerInf {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -512,22 +540,25 @@ h1 {
     margin-top: -60px;
     margin-right: 40px;
 }
-.paraQuienDerInf img{
+
+.paraQuienDerInf img {
     margin-top: 10px;
     height: 40px;
     width: 40px;
 
 }
-.paraQuienDerInf h4{
+
+.paraQuienDerInf h4 {
     font-family: var(--fuentePrincipal);
     background-color: black;
     color: white;
     text-transform: uppercase;
     padding: 40px 30px;
-    text-align:left;
+    text-align: left;
     width: 250px;
 }
-.paraQuienDerInf h4 span{
+
+.paraQuienDerInf h4 span {
     color: var(--colorPrincipal);
 }
 
@@ -544,23 +575,23 @@ h1 {
     color: white;
 } */
 
-.cajas-localizaciones{
+.cajas-localizaciones {
     background-color: black;
     padding: 100px 0;
 }
 
-.cajas-localizaciones .contenedor{
+.cajas-localizaciones .contenedor {
     display: flex;
 }
 
-.cajas-localizaciones .contenedor div{
+.cajas-localizaciones .contenedor div {
     width: 25%;
     padding: 24px 10px;
     color: white;
     margin: 0;
 }
 
-.cajas-localizaciones h2{
+.cajas-localizaciones h2 {
     color: white;
     font-size: 27px;
     font-weight: 700px;
@@ -577,12 +608,13 @@ h1 {
 
 /* ESTILOS CONTACTAR  */
 
-.Contacto{
+.Contacto {
     background-color: var(--colorPrincipal);
     padding-top: 90px;
     padding-bottom: 130px;
 }
-.Contacto .contenedor>h3{
+
+.Contacto .contenedor>h3 {
     color: white;
     font-size: 17px;
     margin-bottom: 22px;
@@ -590,21 +622,24 @@ h1 {
     font-family: var(--fuentePrincipal);
     text-transform: uppercase;
 }
-.Contacto .contenedor>h2{
+
+.Contacto .contenedor>h2 {
     color: white;
     margin-bottom: 22px;
     text-transform: uppercase;
     font-weight: 800;
 }
-.ContactoCuadros{
+
+.ContactoCuadros {
     display: flex;
     flex-direction: row;
 }
 
-.ContactoCuadros img{
+.ContactoCuadros img {
     margin-right: 15px;
 }
-.cuadro1{
+
+.cuadro1 {
     display: flex;
     background-color: white;
     margin-right: 15px;
@@ -615,7 +650,8 @@ h1 {
     max-width: 50%;
     padding: 20px;
 }
-.cuadro2{
+
+.cuadro2 {
     background-color: white;
     margin-left: 15px;
     border-radius: 0.55rem;
@@ -643,39 +679,39 @@ h1 {
 
 /* ESTILOS FOOTER  */
 
-.seccionFooter{
-    display:flex;
+.seccionFooter {
+    display: flex;
     flex-direction: column;
     margin-bottom: 40px;
 }
 
-.enlacesFooter{
+.enlacesFooter {
     padding-top: 50px;
     padding-bottom: 50px;
     border-bottom: 1px solid black;
 }
 
-.enlacesFooter a{
+.enlacesFooter a {
     font-family: var(--fuentePrincipal);
-    color:var(--colorSecundario);
+    color: var(--colorSecundario);
     font-size: 1.7rem;
     font-weight: 800;
-    margin-right:80px;
+    margin-right: 80px;
     line-height: 1.2;
     text-transform: uppercase;
 }
 
-.paginasLegales{
+.paginasLegales {
     padding-top: 20px;
     padding-bottom: 20px;
     border-bottom: 1px solid black;
 }
 
-.paginasLegales a{
+.paginasLegales a {
     font-family: var(--fuentePrincipal);
-    color:var(--colorSecundario);
+    color: var(--colorSecundario);
     font-size: 1.7rem;
-    margin-right:80px;
+    margin-right: 80px;
     line-height: 1.2;
 
 }
@@ -684,7 +720,7 @@ h1 {
 
 /* ESTILOS HEADER  */
 
-.seccionHeader{
+.seccionHeader {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -698,13 +734,14 @@ h1 {
     display: flex;
     flex-direction: column;
 }
-.seccionLogin{
+
+.seccionLogin {
 
     display: flex;
     justify-content: flex-end;
 }
 
-.seccionLogin a{
+.seccionLogin a {
 
     color: var(--colorPrincipal);
     font-family: var(--fuentePrincipal);
@@ -716,12 +753,12 @@ h1 {
     font-size: 1.7rem;
 }
 
-.seccionLogin a:hover{
+.seccionLogin a:hover {
     text-decoration: underline;
 }
 
 
-.seccionNav a{
+.seccionNav a {
     color: var(--colorSecundario);
     font-family: var(--fuentePrincipal);
     margin-left: 7px;
@@ -733,23 +770,23 @@ h1 {
     display: inline-block;
 }
 
-.seccionNav a:hover{
+.seccionNav a:hover {
     text-decoration: underline;
 }
 
-.botonInformate{
+.botonInformate {
     background-color: var(--colorPrincipal);
     padding: 0.6rem 1.5rem;
     border-radius: 4rem;
     color: white !important;
 }
 
-.botonInformate:hover{
+.botonInformate:hover {
     background-color: var(--colorSecundario);
     text-decoration: none !important;
 }
 
-.seccionImagen{
+.seccionImagen {
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -815,4 +852,3 @@ FONDO AZUL. (MIRAR PIZARRA)*/
     justify-content: flex-start;
     align-items: end;
 } */
-
